--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <ul>
     <li><a href="java 1.html">Java 1</a></li>
     <li><a href="java 2.html">Java 2</a></li>
-    <li><a href="java .html">Java 3</a></li>
+    <li><a href="java 3.html">Java 3</a></li>
   </ul>
 </body>
 </html>
