--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <li><a href="java 2.html">Java 2</a></li>
     <li><a href="java 3.html">Java 3</a></li>
   </ul>
+
+  <h3><a href="Module 3 quiz 1.html">Module 3 quiz 1</a></h3>
+  <h3><a href="Module 3 quiz 2.html">Module 3 quiz 2</a></h3>
 </body>
 </html>
